@@ -1,3 +1,9 @@
+Wed Apr 20 08:03:23 2005 CDT  Will Otte  <wotte@dre.vanderbilt.edu>
+
+	* DAnCE/Config_Handlers/DP_Handler.cpp
+	
+	Silenced some compile errors in VC6.
+	
 Tue Apr 19 23:41:02 2005 CDT  Will Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/Config_Handlers/XML_File_Intf.cpp
